Fixes issue #67, changes comment layout slightly on mobile to fix scroll bar pushing content over a bit when displayed

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -458,7 +458,7 @@ body {
 	position:relative;
 	left: 10%;
 	height: 150px;
-	width:90%;
+	width:88.5%;
 	border-bottom: 1px solid black;
 	border-left: 1px solid black;
 	box-sizing:border-box;
